Move socker.js to root, restructure, compile to es5 on publish

--- a/socker.js/package.json
+++ b/socker.js/package.json
@@ -1,13 +1,14 @@
 {
   "name": "socker.js",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "description": "socker client",
-  "main": "socker.js",
+  "main": "dist/socker.js",
   "directories": {
     "example": "example"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "gulp"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/5monkeys/socker/issues"
   },
-  "homepage": "https://github.com/5monkeys/socker"
+  "homepage": "https://github.com/5monkeys/socker",
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-util": "^3.0.2"
+  }
 }
