--- a/socker.js/package.json
+++ b/socker.js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socker.js",
-  "version": "0.1.4",
+  "version": "2.0b1",
   "description": "socker client",
   "main": "dist/socker.js",
   "directories": {
@@ -27,5 +27,8 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-util": "^3.0.2"
+  },
+  "dependencies": {
+    "gulp-babel": "^5.2.1"
   }
 }
