Use SemVer, simple text file for python version
- Use VERSION file with SemVer version
- Rename tools/{update_version => set_version}.py
- Use semver parsing and formatting in tools/set_version.py
- Extract final python package version from egg_info, since distutils may
  normalize the version from e.g "2.0.0-beta.4" to "2.0.0b4".

--- a/socker.js/package.json
+++ b/socker.js/package.json
@@ -1,11 +1,11 @@
 {
   "name": "socker.js",
-  "version": "2.0b3",
+  "version": "2.0.0-beta.4",
   "description": "socker client",
   "main": "dist/socker.js",
-  "directories": {
-    "example": "example"
-  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "gulp"
