--- a/socker.js/package.json
+++ b/socker.js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socker.js",
-  "version": "2.0.0-beta.5",
+  "version": "2.0.0",
   "description": "socker client",
   "main": "dist/socker.js",
   "files": [
