--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-asyncio-redis>=0.13.4
-websockets>=2.3
+asyncio-redis~=0.16.0
+websockets~=15.0.1
 docopt>=0.6.2
-Werkzeug==0.10.4
-semver==2.7.2
+Werkzeug~=3.1.3
+semver~=3.0.4
